--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -4,16 +4,16 @@ body {
   font-family: "Open Sans", sans-serif;
 }
 
-.Landing {
+.landing {
   background-color: #f3c1ff;
   background-image: linear-gradient(to top, #f3c1ff, #cdc1ff 80%, #c1d5ff);
 }
 
-.Fancy {
+.fancy {
   font-family: "M PLUS Rounded 1c", sans-serif;
 }
 
-.Regular {
+.regular {
   font-family: "Open Sans", sans-serif;
 }
 
