--- a/assets/styles/regular.css
+++ b/assets/styles/regular.css
@@ -1,26 +1,66 @@
-.Products {
+body {
+  margin: 0;
+  padding: 0;
+  font-family: "Open Sans", sans-serif;
+}
+
+.landing {
+  background-color: #f3c1ff;
+  background-image: linear-gradient(to top, #f3c1ff, #cdc1ff 80%, #c1d5ff);
+}
+
+.fancy {
+  font-family: "M PLUS Rounded 1c", sans-serif;
+}
+
+.regular {
+  font-family: "Open Sans", sans-serif;
+}
+
+.products {
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
   height: 100vh;
 }
+.products .header {
+  font-family: "M PLUS Rounded 1c", sans-serif;
+  font-weight: bold;
+  font-size: 3.5rem;
+  padding: 25px;
+  display: flex;
+  align-items: center;
+  color: #333;
+}
+.products .header img {
+  margin-right: 25px;
+  height: 3.5rem;
+}
 
-.Landing {
+.landing {
   background-image: url("../img/landing.png");
   background-position: center;
   background-attachment: fixed;
   height: 100vh;
 }
-.Landing .Description {
+.landing .logo {
+  padding: 30px;
+  text-align: center;
+}
+.landing .logo img {
+  width: 60%;
+  max-width: 300px;
+}
+.landing .description {
   max-width: 400px;
   text-align: center;
   margin: 0 auto;
-  padding: 50px 10px;
+  padding: 15px 10px;
 }
-.Landing .Description .Fancy {
+.landing .description .fancy {
   color: #111;
   display: inline-block;
   margin-bottom: 15px;
 }
-.Landing .Description a {
+.landing .description a {
   display: inline-block;
   margin-top: 15px;
   font-size: 1.3rem;
@@ -28,10 +68,10 @@
   background-color: #333;
   color: #ffffff;
 }
-.Landing .Description a:hover {
+.landing .description a:hover {
   background-color: #444;
 }
-.Landing > .gigantic {
+.landing > .gigantic {
   line-height: 9rem;
   font-size: 9rem;
   color: #ffffff;
@@ -42,11 +82,11 @@
   z-index: 100;
   text-shadow: 8px 3px rgba(0, 0, 0, 0.6);
 }
-.Landing > .gigantic span:nth-child(2) {
+.landing > .gigantic span:nth-child(2) {
   position: relative;
   left: 30px;
 }
-.Landing > .gigantic span:nth-child(2)::after {
+.landing > .gigantic span:nth-child(2)::after {
   content: "";
   position: absolute;
   left: -30px;
