--- a/assets/styles/regular.scss
+++ b/assets/styles/regular.scss
@@ -1,8 +1,9 @@
 @import "main";
 
-.products {
+#products {
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
-    height: 100vh;
+    min-height: 100vh;
+    padding-bottom: 25px;
 
     .header {
         font-family: $header_font;
@@ -16,6 +17,92 @@
         img {
             margin-right: 25px;
             height: 3.5rem;
+        }
+    }
+
+    #body {
+        display: flex;
+        flex-wrap:wrap;
+        justify-content: center;
+
+        .product {
+            font-family: $content_font;
+            display: block;
+            border: 1px solid #e2e2e2;
+            margin: 15px;
+            width: calc(100% * (1/4) - 10px - 1px);
+
+            .header {
+                font-family: $content_font;
+                margin: 0;
+                padding: 10px;
+                font-size: 1.3rem;
+            }
+
+            .img {
+                img {
+                    width: 100%;
+                }
+            }
+
+            .footer {
+                padding: 10px;
+                &::after {
+                    content: '';
+                    clear: both;
+                }
+                .set {
+                    display: block;
+                    
+                    .price {
+                        font-family: $content_font;
+                        font-weight: bold;
+                        display: inline-block;
+                    }
+
+                    .description {
+                        text-align: right;
+                        float: right;
+                        max-width: 200px;
+                    }
+                }
+
+                .multi {
+                    cursor: pointer;
+                    display: flex;
+                    justify-content: space-between;
+                    .sets {
+                        flex-grow: 1;
+                        display: flex;
+                        flex-direction: column;
+                        justify-content: space-between;
+
+                        .set:not(:nth-child(1)) {
+                            display: none;
+                        }
+                    }
+
+                    &.shown .sets {
+                        .set {
+                            display: block;
+                        }
+
+                        .set:not(:first-child) {
+                            padding-top: 5px;
+                        }
+
+                        .set:not(:last-child) {
+                            border-bottom: 0.5px solid #e2e2e2;
+                            padding-bottom: 5px;
+                        }
+                    }
+
+                    .expand {
+                        flex-grow: 0;
+                        margin-left: 10px;
+                    }
+                }
+            }
         }
     }
 }
@@ -60,31 +147,16 @@
             }
         }
     }
+}
 
-    >.gigantic {
-        line-height: 9rem;
-        font-size: 9rem;
-        color: #ffffff;
-        position: relative;
-        top: 50%;
-        left: 25px;
-        display: inline-block;
-        z-index: 100;
-        text-shadow: 8px 3px rgba(0, 0, 0, 0.6);
+@media only screen and (max-width: 800px) {
+    #products {
+        #body {
+            flex-direction: column;
 
-        span:nth-child(2) {
-            position: relative;
-            left: 30px;
-
-            &::after {
-                content: '';
-                position: absolute;
-                left: -30px;
-                top: -3rem;
-                height: 10rem;
-                width: calc(100% + 40px);
-                background-color: #111;
-                z-index: -1;
+            .product {
+                margin-bottom: 50px;
+                width: calc(100% - 30px);
             }
         }
     }
