--- a/assets/styles/regular.css
+++ b/assets/styles/regular.css
@@ -51,7 +51,8 @@ body {
   font-family: "Open Sans", sans-serif;
   margin: 0;
   padding: 10px;
-  font-size: 1.3rem;
+  font-size: 1rem;
+  color: #333;
 }
 #products #body .product .img img {
   width: 100%;
@@ -112,34 +113,35 @@ body {
   height: 100vh;
 }
 .landing .logo {
-  padding: 30px;
   text-align: center;
+  padding: 30px 0 0 0;
 }
 .landing .logo img {
   width: 60%;
   max-width: 300px;
 }
 .landing .description {
-  max-width: 400px;
+  max-width: 500px;
   text-align: center;
   margin: 0 auto;
-  padding: 15px 10px;
 }
 .landing .description .fancy {
   color: #111;
   display: inline-block;
-  margin-bottom: 15px;
+  margin-bottom: 10px;
 }
 .landing .description a {
   display: inline-block;
   margin-top: 15px;
-  font-size: 1.3rem;
-  padding: 10px 25px;
-  background-color: #333;
-  color: #ffffff;
+  font-size: 1rem;
+  padding: 10px 35px;
+  background-color: #A8E0D7;
+  color: #333;
+  text-decoration: none;
 }
 .landing .description a:hover {
-  background-color: #444;
+  color: #555555;
+  background-color: #9acfc7;
 }
 
 @media only screen and (max-width: 800px) {
