--- a/assets/styles/regular.scss
+++ b/assets/styles/regular.scss
@@ -36,7 +36,8 @@
                 font-family: $content_font;
                 margin: 0;
                 padding: 10px;
-                font-size: 1.3rem;
+                font-size: 1rem;
+                color: #333;
             }
 
             .img {
@@ -114,8 +115,8 @@
     height: 100vh;
 
     .logo {
-        padding: 30px;
-        text-align: center; 
+        text-align: center;
+        padding: 30px 0 0 0;
         img {
             width: 60%;
             max-width: 300px;
@@ -123,27 +124,28 @@
     }
 
     .description {
-        max-width: 400px;
+        max-width: 500px;
         text-align: center;
         margin: 0 auto;
-        padding: 15px 10px;
 
         .fancy {
             color: #111;
             display: inline-block;
-            margin-bottom: 15px;
+            margin-bottom: 10px;
         }
 
         a {
             display: inline-block;
             margin-top: 15px;
-            font-size: 1.3rem;
-            padding: 10px 25px;
-            background-color: #333;
-            color: #ffffff;
+            font-size: 1rem;
+            padding: 10px 35px;
+            background-color: #A8E0D7;
+            color: #333;
+            text-decoration: none;
 
             &:hover {
-                background-color: #444;
+                color: #555555;
+                background-color: rgb(154, 207, 199);
             }
         }
     }
